[project]
name = "myproject"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev   = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "audit"},
    {include-group = "docs"},
]
lint  = ["ruff", "ty"]
test  = ["pytest", "pytest-cov"]
audit = ["pip-audit"]
docs  = ["nbconvert"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.uv]
exclude-newer = "1 week"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001"]

[tool.pytest.ini_options]
# -x: stop on first error
# --cov=src: measure coverage on source
# --cov-report=term-missing: show uncovered lines in terminal
addopts = "-x --cov=src --cov-report=term-missing"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise.*",
]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment         = "warn"
